force-app/main/default/objects/ARTL_Pricing_Productcodes__mdt/ARTL_Pricing_Productcodes__mdt.object-meta.xml
<CustomObject>
    <label>Pricing_Productcodes</label>
    <pluralLabel>Pricing_Productcodes</pluralLabel>
</CustomObject>