force-app/main/default/objects/ARTL_Pricing_Productcodes__mdt/fields/ARTL_Commercial_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Commercial_Product_Code__c</fullName>
    <label>Commercial Product Code</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>