force-app/main/default/objects/ARTL_Pricing_Productcodes__mdt/fields/ARTL_Product_Code_and_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Product_Code_and_Field_Name__c</fullName>
    <label>Product Code and Field Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>