force-app/main/default/objects/ARTL_Pricing_Productcodes__mdt/fields/ARTL_Productcodes__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Productcodes__c</fullName>
    <label>Productcodes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>